--- a/a2.css
+++ b/a2.css
@@ -1,12 +1,13 @@
 body {
     margin: 35% ;
-    margin-top: 8%
+    margin-top: 3%
 }
 
 #startView {
     width : 400px;
-    height : 600px;
-    border:1px solid #c3c3c3;
+    height : 680px;
+    /*border:1px solid #c3c3c3;*/
+    /*border-color: black;*/
     background-color: lightgrey;
     text-align: center;
     display: table-cell;
@@ -16,13 +17,15 @@ body {
 #gameView {
     width : 400px;
     height : 600px;
-    border:1px solid #c3c3c3;
+    /*border:1px solid #c3c3c3;*/
+    /*border-color: black;*/
 }
 
 #inforBar {
-    width : 400px;
-    height : 80px;
-    border:1px solid #c3c3c3;
+    width : 394px;
+    height : 74px;
+    /*border:1px solid #c3c3c3;*/
+    border: 3px solid lightgrey;
 }
 
 table {
